Android ndk-build scripts (android.mk and application.mk) now generated as artefacts of CMake build.

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -1,28 +1,37 @@
 cmake_minimum_required (VERSION 2.8.12.2)
 
-PROJECT (my-project)
+PROJECT (native-activity)
+SET (OUTPUT_NAME native-activity)
 
+
+# --------------- Add Library Dependencies ---------------- #
+
+SET (LIBS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/)
+
+SET (LOCAL_LDLIBS "-llog -landroid -lEGL -lGLESv2 -L${LIBS_DIR} -lnative-activity-lib -L${LIBS_DIR} -lpng -lz -lm -L${LIBS_DIR} -lcrypto -L${LIBS_DIR} -lssl -L${LIBS_DIR} -lcurl -L${LIBS_DIR} -lcares -L${LIBS_DIR} -lsimd -L${LIBS_DIR} -lmyjpeg")
+
+SET(LIBRARY_DEPS ${LOCAL_LDLIBS})
+
+
+# --------------------- Add Sources ----------------------- #
 
 SET( MY_C_FLAGS "-s -O2 -mthumb-interwork -mthumb -march=armv7-a -mfloat-abi=softfp -mfpu=vfp3")
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_C_FLAGS}" )
 SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MY_C_FLAGS}" )
 
-SET (LIBS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/)
-#LINK_DIRECTORIES(${LIBS_DIR})
-
-SET(LIBRARY_DEPS -llog -landroid -lEGL -lGLESv2 -L${LIBS_DIR} -lnative-activity-lib -L${LIBS_DIR} -lpng -lz -lm -L${LIBS_DIR} -lcrypto -L${LIBS_DIR} -lssl -L${LIBS_DIR} -lcurl -L${LIBS_DIR} -lcares -L${LIBS_DIR} -lsimd -L${LIBS_DIR} -lmyjpeg)
-
-SET (ANDROID_EXAMPLE_SOURCE_DIR "jni/")
-SET (CROSS_PLATFORM_EXAMPLE_SOURCE_DIR "../src/")
-
+SET (ANDROID_EXAMPLE_SOURCE_DIR "jni")
+SET (CROSS_PLATFORM_EXAMPLE_SOURCE_DIR "../src")
 SET (CROSS_PLATFORM_EXAMPLE_SOURCES "${CROSS_PLATFORM_EXAMPLE_SOURCE_DIR}/*.cpp")
+
 FILE (GLOB_RECURSE SourceFiles 
     "${ANDROID_EXAMPLE_SOURCE_DIR}/*.cpp"
     "${CROSS_PLATFORM_EXAMPLE_SOURCES}"
 )
 
- SET (SRC ${SourceFiles})
-# SET (SRC test.cpp)
+SET (SRC ${SourceFiles})
+
+
+# ------------------- Add Includes ------------------------ #
 
 SET (SDK_INCLUDE_DIR "./libs/")
 SET (PLATFORM_DIR "${SDK_INCLUDE_DIR}/platform/")
@@ -34,15 +43,14 @@ SET (LIB_PNG_INCLUDES "${SDK_INCLUDE_DIR}/png/*.h")
 SET (ANDROID_INCLUDES "${ANDROID_EXAMPLE_SOURCE_DIR}/*.h" )
 SET (CROSS_PLATFORM_EXAMPLE_INCLUDES "${CROSS_PLATFORM_EXAMPLE_SOURCE_DIR}/*.h")
 
-# Includes
 MACRO(HEADER_DIRECTORIES return_list)
     FILE(GLOB_RECURSE new_list 
-    	${PLATFORM_INCLUDES} 
-    	${CURL_INCLUDES} 
-    	${LIB_JPEG_INCLUDES} 
-    	${LIB_PNG_INCLUDES} 
-    	${ANDROID_INCLUDES} 
-    	${CROSS_PLATFORM_EXAMPLE_INCLUDES}
+        ${PLATFORM_INCLUDES} 
+        ${CURL_INCLUDES} 
+        ${LIB_JPEG_INCLUDES} 
+        ${LIB_PNG_INCLUDES} 
+        ${ANDROID_INCLUDES} 
+        ${CROSS_PLATFORM_EXAMPLE_INCLUDES}
     )
     SET(dir_list "")
     FOREACH(file_path ${new_list})
@@ -55,26 +63,41 @@ ENDMACRO()
 
 HEADER_DIRECTORIES(HeaderDirectories)
 SET (HDR ${HeaderDirectories})
-
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -pedantic -fPIC" )
-
 INCLUDE_DIRECTORIES(${HDR})
 
-# building .a works fine
-# add_library(platform-sdk STATIC ${SRC})
 
-#SET (LINKER_FLAGS "${LINKER_FLAGS} -Wl,--as-needed -Wl,--gc-sections -Wl,--no-undefined -Wl,--strip-all -Wl,-rpath-#link=${ANDROID_NDK_SYSROOT}/usr/lib/ -L${ANDROID_NDK_SYSROOT}/usr/lib/")
+# -------------------- Create Library --------------------- #
 
-add_library(platform-sdk SHARED ${SRC})
-
-target_link_libraries(platform-sdk ${LIBRARY_DEPS})
+ADD_LIBRARY (${OUTPUT_NAME} SHARED ${SRC})
+TARGET_LINK_LIBRARIES (${OUTPUT_NAME} ${LIBRARY_DEPS})
 
 
+# -------------------- Poke ndk-build --------------------- #
 
-#include("../toolchain/Apk.cmake" REQUIRED) 
-#set_target_properties(platform-sdk PROPERTIES COMPILE_DEFINITIONS "ANDROID")
-#set(APP_SHARED_LIBRARIES ${LIBRARY_OUTPUT_PATH}/libplatform-sdk.so)
-#android_create_apk(platform-sdk "${CMAKE_BINARY_DIR}/apk" "${APP_SHARED_LIBRARIES}" "assets" "./")
+# get list as a string with ';' between values (cmake default seperator), then replace the ';' with a custom seperator
 
+function(JOIN VALUES GLUE OUTPUT)
+  string (REPLACE ";" "${GLUE}" _TMP_STR "${VALUES}")
+  set (${OUTPUT} "${_TMP_STR}" PARENT_SCOPE)
+endfunction()
+
+JOIN("${HDR}" " " HDR)
+JOIN("${SRC}" " " SRC) 
+string (REPLACE "${ANDROID_EXAMPLE_SOURCE_DIR}/" "" SRC "${SRC}")
+string (REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/" "" SRC "${SRC}")
+string (REPLACE "../src" "../../src" SRC "${SRC}")
+
+# set c++11 stuff here 
+SET (LOCAL_CPPFLAGS "")
+
+CONFIGURE_FILE (
+    "../cmake/toolchain/android/Android.mk.in" 
+    "${CMAKE_CURRENT_SOURCE_DIR}/${ANDROID_EXAMPLE_SOURCE_DIR}/Android.mk"
+)
+
+CONFIGURE_FILE (
+    "../cmake/toolchain/android/Application.mk.in" 
+    "${CMAKE_CURRENT_SOURCE_DIR}/${ANDROID_EXAMPLE_SOURCE_DIR}/Application.mk"
+)
 
 
