--- a/ios/CMakeLists.txt
+++ b/ios/CMakeLists.txt
@@ -1,11 +1,11 @@
-#cmake_minimum_required (VERSION 2.8.12.2)
-#target 3.0 as need fix for http://public.kitware.com/Bug/view.php?id=14498
 cmake_minimum_required (VERSION 3.0)
 
-PROJECT(platform-sdk CXX C)
-SET(NAME platform-sdk)
+PROJECT (platform-sdk)
+SET (OUTPUT_NAME platform-sdk)
 
-# Source files
+
+# --------------------- Add Sources ----------------------- #
+
 SET (IOS_EXAMPLE_SOURCE_DIR "ios_src/")
 SET (CROSS_PLATFORM_EXAMPLE_SOURCE_DIR "../src/")
 
@@ -19,7 +19,9 @@ FILE (GLOB_RECURSE SourceFiles
 
 SET (SRC ${SourceFiles})
 
-# Headers
+
+# ------------------- Add Includes ------------------------ #
+
 SET (SDK_INCLUDE_DIR "Include/")
 SET (PLATFORM_DIR "${SDK_INCLUDE_DIR}/platform/")
 SET (PLATFORM_INCLUDES "${PLATFORM_DIR}/*.h" "${PLATFORM_DIR}/*.hpp" "${PLATFORM_DIR}/*.impl")
@@ -35,16 +37,6 @@ FILE (GLOB_RECURSE HeaderFiles
 )
 SET (HDR ${HeaderFiles})
 
-SET(CMAKE_XCODE_EFFECTIVE_PLATFORMS "-iphoneos;-iphonesimulator")
-SET(CMAKE_OSX_ARCHITECTURES "armv7;i386")
-#SET(CMAKE_OSX_ARCHITECTURES $(ARCHS_STANDARD_32_BIT))
-SET(CMAKE_CXX_FLAGS "-x objective-c++")
-
-SET(CMAKE_EXE_LINKER_FLAGS
-    "-framework CoreLocation -framework MobileCoreServices -framework SystemConfiguration -framework CFNetwork -framework GLKit -framework OpenGLES -framework UIKit -framework Foundation -framework CoreGraphics -framework CoreData -LInclude/ -lapps-on-maps -LInclude/ -lapps-on-maps-sim -LInclude/ -lturbojpeg -L/usr/lib/ -lz"
-)
-
-# Includes
 MACRO(HEADER_DIRECTORIES return_list)
     FILE(GLOB_RECURSE new_list "${SDK_INCLUDE_DIR}/*.h" "ios_src/*.h" "../src/*.h")
     SET(dir_list "")
@@ -59,7 +51,15 @@ ENDMACRO()
 HEADER_DIRECTORIES(HeaderDirectories)
 include_directories (${HeaderDirectories})
 
-SET(APP_TYPE MACOSX_BUNDLE)
+
+# --------------- Add Library Dependencies ---------------- #
+
+SET(CMAKE_EXE_LINKER_FLAGS
+    "-framework CoreLocation -framework MobileCoreServices -framework SystemConfiguration -framework CFNetwork -framework GLKit -framework OpenGLES -framework UIKit -framework Foundation -framework CoreGraphics -framework CoreData -LInclude/ -lapps-on-maps -LInclude/ -lapps-on-maps-sim -LInclude/ -lturbojpeg -L/usr/lib/ -lz"
+)
+
+
+# -------------------- Add Resources ---------------------- #
 
 set (Resources "")
 FILE (GLOB Resources ${Resources} "Resources/Icons/*.png")
@@ -71,8 +71,18 @@ set (Resources ${Resources} "Resources/pod_animation_example")
 set (Resources ${Resources} "Resources/route_simulation_example")
 set (Resources ${Resources} "Resources/route_simulation_animation_example")
 
+
+# ------------------- Configure XCode --------------------- #
+
+SET(CMAKE_XCODE_EFFECTIVE_PLATFORMS "-iphoneos;-iphonesimulator")
+SET(CMAKE_OSX_ARCHITECTURES "armv7;i386")
+SET(CMAKE_CXX_FLAGS "-x objective-c++")
+
+
+SET(APP_TYPE MACOSX_BUNDLE)
+
 add_executable(
-	${NAME}
+	${OUTPUT_NAME}
     ${APP_TYPE}
    	${SourceFiles}
     ${HeaderFiles}
@@ -82,7 +92,7 @@ add_executable(
 # set plist template and properties
 
 set_target_properties(
-    ${NAME} 
+    ${OUTPUT_NAME} 
     PROPERTIES 
     MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/ios_src/App-Info.plist.in"
     RESOURCE "${Resources}" 
@@ -97,12 +107,11 @@ SET (MACOSX_BUNDLE_BUNDLE_NAME "MyApp!")
 
 
 # set xcode proj properties
-set_xcode_property (${NAME} CODE_SIGN_IDENTITY "iPhone Developer")
-set_xcode_property (${NAME} CLANG_CXX_LANGUAGE_STANDARD "c++98")
-set_xcode_property (${NAME} CLANG_CXX_LIBRARY "libstdc++")
-set_xcode_property (${NAME} IPHONEOS_DEPLOYMENT_TARGET "5.0")
-set_xcode_property (${NAME} TARGETED_DEVICE_FAMILY "1,2")
-
+set_xcode_property (${OUTPUT_NAME} CODE_SIGN_IDENTITY "iPhone Developer")
+set_xcode_property (${OUTPUT_NAME} CLANG_CXX_LANGUAGE_STANDARD "c++98")
+set_xcode_property (${OUTPUT_NAME} CLANG_CXX_LIBRARY "libstdc++")
+set_xcode_property (${OUTPUT_NAME} IPHONEOS_DEPLOYMENT_TARGET "5.0")
+set_xcode_property (${OUTPUT_NAME} TARGETED_DEVICE_FAMILY "1,2")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98 -stdlib=libstdc++")
 
