--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-    <application android:label="EegeoDroid" android:theme="@android:style/Theme.NoTitleBar">>
+    <application android:label="EegeoDroid" android:theme="@android:style/Theme.NoTitleBar">
        
         <activity android:name=".MainActivity"
                   android:label="EegeoDroid"
