Remove hard-coded path to cmake_source_dir in xcode recursive groupify function.

--- a/ios/CMakeLists.txt
+++ b/ios/CMakeLists.txt
@@ -131,7 +131,7 @@ endif(${COMPILE_CPP_11} STREQUAL "1")
 FUNCTION(groupify_files input_files_to_groupify)
     FOREACH(source_file_name ${input_files_to_groupify})
         GET_FILENAME_COMPONENT(directory_path ${source_file_name} DIRECTORY)
-        STRING(REGEX REPLACE "^/Users/kimbleoperations/Desktop/droid/mobile-sdk-harness/ios/" "" stripped_path ${directory_path})
+        STRING(REGEX REPLACE "^${CMAKE_SOURCE_DIR}/" "" stripped_path ${directory_path})
         STRING(REGEX REPLACE "^../" "" stripped_path ${stripped_path})
         STRING(REGEX REPLACE "/" "\\\\" stripped_path ${stripped_path})
         source_group("${stripped_path}" FILES ${source_file_name})
