--- a/ios/CMakeLists.txt
+++ b/ios/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.0)
 
-PROJECT (platform-sdk)
-SET (OUTPUT_NAME platform-sdk)
+PROJECT (eegeo-sdk-project)
+SET (OUTPUT_NAME eegeo-sdk)
 
 
 # --------------------- Add Sources ----------------------- #
