--- a/ios/CMakeLists.txt
+++ b/ios/CMakeLists.txt
@@ -20,13 +20,15 @@ SET (SourceFiles ${sources})
 SET (SDK_INCLUDE_DIR "Include/")
 SET (PLATFORM_DIR "${SDK_INCLUDE_DIR}/platform/")
 SET (PLATFORM_INCLUDES "${PLATFORM_DIR}/*.h" "${PLATFORM_DIR}/*.hpp" "${PLATFORM_DIR}/*.impl")
-SET (IOS_INCLUDES "${IOS_EXAMPLE_SOURCE_DIR}/*.h" )
+SET (IOS_INCLUDES "${IOS_EXAMPLE_SOURCE_DIR}/*.h")
 SET (CROSS_PLATFORM_EXAMPLE_INCLUDES "${CROSS_PLATFORM_EXAMPLE_SOURCE_DIR}/*.h")
 
 FILE (GLOB_RECURSE HeaderFiles 
 	"${PLATFORM_INCLUDES}" 	    
     "${IOS_INCLUDES}"
     "${CROSS_PLATFORM_EXAMPLE_INCLUDES}"
+    "${IOS_EXAMPLE_SOURCE_DIR}/CMakeLists.txt"
+    "${CROSS_PLATFORM_EXAMPLE_SOURCE_DIR}/CMakeLists.txt"
 )
 
 SET (HDR ${HeaderFiles})
