app lifetime fixes. Filter out screenSize configChanges to avoid restarting main activity unnecessarily, for example after screen-off following power lock which can cause switch back to Portrait mode on many devices. Buddy: Ian

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -16,7 +16,7 @@
        
         <activity android:name="com.eegeo.BackgroundThreadActivity"
                   android:label="EegeoDroid"
-                  android:configChanges="orientation|keyboardHidden"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
                   android:screenOrientation="landscape"
               	  android:launchMode="singleInstance"
               	  android:hardwareAccelerated="false">
