Roll in gps/compass permission change for iOS8 to sdk harness. Buddy: IanH

--- a/ios/ExampleApp/ExampleApp-Info.plist
+++ b/ios/ExampleApp/ExampleApp-Info.plist
@@ -28,8 +28,10 @@
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>MainStoryboard_iPad</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+        <string></string>
+        <key>UIRequiredDeviceCapabilities</key>
+        <array>
 		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
