--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.eegeo"
+        package="com.eegeo.mobilesdkharness"
         android:versionCode="1"
         android:versionName="1.0">
 
@@ -14,8 +14,8 @@
 
     <application android:label="EegeoDroid" android:theme="@android:style/Theme.NoTitleBar">
        
-        <activity android:name="com.eegeo.BackgroundThreadActivity"
-                  android:label="EegeoDroid"
+        <activity android:name=".BackgroundThreadActivity"
+                  android:label="EegeoMobileSdkHarness"
                   android:configChanges="orientation|keyboardHidden|screenSize"
                   android:screenOrientation="landscape"
               	  android:launchMode="singleInstance"
