--- a/ios/ExampleApp/SDKSamplesApp-Info.plist
+++ b/ios/ExampleApp/SDKSamplesApp-Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(PRODUCT_VERSION}</string>
+	<string>${PRODUCT_VERSION}</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
