--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -10,20 +10,21 @@
     
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
-    <application android:label="EegeoDroid" android:theme="@android:style/Theme.NoTitleBar">
-       
-        <activity android:name=".BackgroundThreadActivity"
-                  android:label="EegeoMobileSdkHarness"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-              	  android:launchMode="singleInstance"
-              	  android:hardwareAccelerated="false">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> 
+ 
+    <application android:label="EegeoDroid" android:theme="@style/AppTheme">
+        
+         <activity
+            android:name=".BackgroundThreadActivity"
+            android:label="@string/app_name" 
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
     </application>
 
 </manifest> 
