--- a/ios/ExampleAppCpp11-Info.plist
+++ b/ios/ExampleAppCpp11-Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>eeGeoAppBase</key>
+	<string>iOS-SDK</string>
 </dict>
 </plist>
