--- a/ios/CMakeLists.txt
+++ b/ios/CMakeLists.txt
@@ -36,9 +36,11 @@ set(CMAKE_OSX_ARCHITECTURES "armv7;arm64;i386")
 set(IOS_WARNING_FLAGS "-Wmost -Wno-four-char-constants -Wno-unknown-pragmas -Wno-reorder")
 
 if(${COMPILE_CPP_03})
+    message(STATUS "Generating cpp03 project")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -x objective-c++ ${IOS_WARNING_FLAGS}")
     set(eegeo_sdk_libs "-lapps-on-maps -lapps-on-maps-sim")
 else(${COMPILE_CPP_03})
+    message(STATUS "Generating cpp11 project")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -x objective-c++ -DCOMPILE_CPP_11 ${IOS_WARNING_FLAGS}")
     set(eegeo_sdk_libs "-lapps-on-maps-cpp11 -lapps-on-maps-cpp11-sim")
 endif(${COMPILE_CPP_03})
