--- a/ios/CMakeLists.txt
+++ b/ios/CMakeLists.txt
@@ -28,7 +28,8 @@ set(storyboards
 set(EEGEO_PLIST_BUNDLE_EXECUTABLE "\${EXECUTABLE_NAME}")
 set(EEGEO_PLIST_BUNDLE_IDENTIFIER "eegeo.\${PRODUCT_NAME:rfc1034identifier}")
 set(EEGEO_PLIST_BUNDLE_SHORT_VERSION_STRING "\${PRODUCT_VERSION}")
-set(EEGEO_PLIST_BUNDLE_DISPLAY_NAME "SDKSamples")
+set(EEGEO_PLIST_BUNDLE_DISPLAY_NAME "SDK Samples")
+set(EEGEO_PLIST_BUNDLE_NAME "\${PRODUCT_NAME}")
 
 # compiler/linker settings
 set(CMAKE_XCODE_EFFECTIVE_PLATFORMS "-iphoneos;-iphonesimulator")
