Add ApiKey header file and update README
Buddy: Malc

--- a/src/Examples/CMakeLists.txt
+++ b/src/Examples/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(headers ${headers} ../src/Examples
 )
 set(currsources
+  ../src/Examples/ApiKey.h
   ../src/Examples/DefaultCameraControllerFactory.cpp
   ../src/Examples/DefaultCameraControllerFactory.h
   ../src/Examples/ExampleController.cpp
