Add resources directory for BillboardSpriteExample to CMakeLists. Buddy: Paul H

--- a/ios/Resources/CMakeLists.txt
+++ b/ios/Resources/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(resources ${resources}
+		Resources/billboarded_sprite_example
 		Resources/DejaVuSansBold.fnt
 		Resources/DejaVuSansBold_0.png
 		Resources/embedded_manifest.txt
