--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@ Include
 bin
 gen
 obj
-libs
+**/libs/eegeo/
+**/libs/armeabi/
+**/libs/armeabi-v7a/
+**/libs/arm64-v8a/
+**/Include/eegeo/
 Include
 .DS_Store
 .classpath
@@ -17,3 +21,4 @@ Include
 .settings/
 project.properties
 **/xcuserdata/
+ios/build
