VR-139 initial work on iOS VR port support buddy:Fahad

--- a/ios/ios_src/Examples/CMakeLists.txt
+++ b/ios/ios_src/Examples/CMakeLists.txt
@@ -5,6 +5,7 @@ set(currsources
   ios_src/Examples/iOSExampleControllerView.h
   ios_src/Examples/iOSExampleControllerView.mm
   ios_src/Examples/iOSUIHelpers.h
+  ios_src/Examples/IosVRModeTracker.cpp  ios_src/Examples/IosVRModeTracker.h
 )
 set(sources ${sources} ${currsources})
 source_group(\\ios_src\\Examples FILES ${currsources})
