VR-139 Porting VR code in example app from vr dame app Buddy: Fahad

--- a/ios/ios_src/CMakeLists.txt
+++ b/ios/ios_src/CMakeLists.txt
@@ -19,4 +19,5 @@ set(currsources
 set(sources ${sources} ${currsources})
 source_group(\\ios_src\\ FILES ${currsources})
 include(ios_src/Examples/CMakeLists.txt)
+include(ios_src/CardboardSDK/CMakeLists.txt)
 endif(${IOS})
