--- a/ios/ios_src/Examples/CMakeLists.txt
+++ b/ios/ios_src/Examples/CMakeLists.txt
@@ -6,6 +6,7 @@ set(currsources
   ios_src/Examples/iOSExampleControllerView.mm
   ios_src/Examples/iOSUIHelpers.h
   ios_src/Examples/IosVRModeTracker.cpp  ios_src/Examples/IosVRModeTracker.h
+  ios_src/Examples/CardboardSDKService.h  ios_src/Examples/CardboardSDKService.mm
 )
 set(sources ${sources} ${currsources})
 source_group(\\ios_src\\Examples FILES ${currsources})
