--- a/src/Examples/CMakeLists.txt
+++ b/src/Examples/CMakeLists.txt
@@ -57,3 +57,4 @@ include(../src/Examples/ToggleTraffic/CMakeLists.txt)
 include(../src/Examples/TrafficCongestion/CMakeLists.txt)
 include(../src/Examples/UI/CMakeLists.txt)
 include(../src/Examples/WebRequest/CMakeLists.txt)
+include(../src/Examples/VRCardboard/CMakeLists.txt)
